2004-08-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.accumulatepopulation.ave: Use 0 instead of NULL if
	a NULL value is encountered in the population field (fixes 
	 bug #982798)
	* dcsewerdesign.fields.returnnumberfields.ave: using field aliases
	instead of names now (RFE #1011957)
	* dcsewerdesignextension.make.ave: version number is 2.0.3+cvs now
	
2004-07-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml:
	* dcsewerdesign.nsi:
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesignextension.make.ave: updated for 2.0.3 release

2004-06-30  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.complexprofile.create.ave: improved configuration
	file checks
	* doc/en/dcsewerdesign.xml: added section on "Enforce Drainage"; 
	enhanced profile creation documentation
	* dcsewerdesign.enforcedrainage.ave: added optional diameter
	parameter
	* dcsewerdesignextension.make.ave: version number is now 2.0.2+cvs
	
2004-06-29  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.enforcedrainage.ave:
	* dcsewerdesign.line.findupstreamlines.ave: added new function to
	complete design process
	* doc/en/dcsewerdesign.xml: updated "Accumulate Population" section;
	formatting
	* dcsewerdesign.calculatemaximummanholeelevations.ave: added DEM
	factor; fixed bug that prevented correct calculation of maxium
	manhole elevations
	* dcsewerdesign.calculateminimumelevationdifferences.ave: added 
	possibility to specify gradient field

2004-06-28  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcsewerdesign.accumulatepopulation.ave: added check for precision of
	accumulated population field

2004-03-01  Steffen Macke <Steffen_Macke@dorsch.com.jo>
	
	* COPYING: corrected license
	* AUTHORS: added Amani
	* build.xml:
	* doc/build.xml:
	* doc/docbook.css:
	* doc/docbook.xsl:
	* doc/docbook_html.xsl:
	* doc/docbook_pdf.xsl:
	* doc/project.dtd:
	* doc/en/dcsewerdesign.xml:
	* dcsewerdesign.help.openchm.ave:
	* dcsewerdesignextension.make.ave: