@@ -5,7 +5,7 @@
   <!-- configuration -->
   
   <!-- Custom DC Sewer Design stylesheets -->
-  <property name="dcsewerdesign_version" value="2.0.3" />
+  <property name="dcsewerdesign_version" value="2.0.4" />
   
   <target name="DCSewDesDistribution" id="DC Sewer DesignDistribution">
     <zip destfile="dcsewerdesign-${dcsewerdesign_version}.zip">
