@@ -1,6 +1,6 @@
 ' DCSewerDesignExtension.make
 
-strVersion = msgbox.input("Enter version","Make DC Sewer Design Extension","2.0.3+cvs")
+strVersion = msgbox.input("Enter version","Make DC Sewer Design Extension","2.0.4")
 if (strVersion=nil)then
   exit
 end
