@@ -1,3 +1,14 @@
+2004-09-05  Steffen Macke <Steffen_Macke@dorsch.com.jo>
+
+	* dcsewerdesign.takeovermanholedata.ave:
+	* dcsewerdesign.lines.takeovermanholedata.ave: fix the takeover 
+	functions for lines containing more than two vertices; make the 
+	functions more robust
+	* doc/en/version.xml:
+	* doc/en/dcsewerdesign.xml: added documentation on Manhole Data to Lin
+	and Line Data to Manhole functions
+	* dcsewerdesignextension.make.ave: updated for 2.0.4 release 
+	
 2004-08-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>
 
 	* dcsewerdesign.accumulatepopulation.ave: Use 0 instead of NULL if
